Final addition to Activitat 7

--- a/html/menu/activitat7/index.html
+++ b/html/menu/activitat7/index.html
@@ -61,6 +61,19 @@
       </table>
     </div>
   </section>
+  <section>
+    <form action="" method="get">
+      <fieldset>
+        <legend>Satisfacció</legend>
+          <label for="satisRange">Indiqui la seva satisfacció amb la pàgina:</label>
+          <br>
+          <label for="satisRange">0</label>
+          <input id="satisRange" type="range" name="satisRange" min="0" max="100" step="5">
+          <label for="satisRange">10</label>
+          <input type="submit" name="submit" value="Envia">
+      </fieldset>
+    </form>
+  </section>
   <footer>
     <p class="center foot">Proudly made with NeoVim. Tested mainly in Mozilla© Firefox</p>
   </footer>
