--- a/html/menu/activitat7/index.html
+++ b/html/menu/activitat7/index.html
@@ -30,10 +30,7 @@
             <br>
             <audio controls autoplay src="audio/inTheNight.opus" type="audio/opus">Ooops! Audio not working.</audio>
           </li>
-          <li>Audio 4
-            <br>
-            <audio controls loop src="audio/crossingField-Rulz.m4a" type="audio/mpeg">Ooops! Audio not working.</audio>
-          </li>
+          <!-- Aquí anava un altre audio -->
         </ul>
       </div>
     </div>
@@ -43,9 +40,7 @@
     <div class="container">
       <table>
         <tr>
-          <td>
-            <video controls src="video/video1.mp4" type="video/mp4">Ooops! Video not working.</video>
-          </td>
+          <!-- Aquí anava un altre video -->
           <td>
             <video controls src="https://pswsm.cat/nextcloud/index.php/s/3SqAjABpXrdg2kK/download/video3.webm" type="video/webm">Ooops! Video not working.</video>
           </td>
