Advanced Activitat 9, due in Friday

--- a/html/menu/activitat9/index.html
+++ b/html/menu/activitat9/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Activitat 9</title>
   <meta content="author" name="Pau Figueras">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
@@ -21,7 +22,7 @@
       <p>Sobre Nosaltres</p>
     </div>
   </nav>
-  <sidebar id="navleft">
+  <aside id="navleft">
     <div>
       <p>Inici</p>
     </div>
@@ -34,7 +35,7 @@
     <div>
       <p>Sobre Nosaltres</p>
     </div>
-  </sidebar>
+  </aside>
   <main class="content">
     <div class="columns">
       <img src="images/image1.webp" alt="Image desc">
@@ -64,9 +65,15 @@
         Saeve certando pugnandoque splendor crescit.<br>
       </p>
     </div>
-    <p class="0grav">\n</p>
-    <p class="0grav">\n</p>
-    <p class="0grav">\n</p>
+    <div class="p-columns">
+      <p>Whole every miles as tiled at seven or. Wished he entire esteem mr oh by. Possible bed you pleasure civility boy elegance ham. He prevent request by if in pleased. Picture too and concern has was comfort. Ten difficult resembled eagerness nor. Same park bore on be. Warmth his law design say are person. Pronounce suspected in belonging conveying ye repulsive.</p>
+    </div>
+    <div class="p-columns">
+      <p>Whole every miles as tiled at seven or. Wished he entire esteem mr oh by. Possible bed you pleasure civility boy elegance ham. He prevent request by if in pleased. Picture too and concern has was comfort. Ten difficult resembled eagerness nor. Same park bore on be. Warmth his law design say are person. Pronounce suspected in belonging conveying ye repulsive.</p>
+    </div>
+    <div class="p-columns">
+      <p>Whole every miles as tiled at seven or. Wished he entire esteem mr oh by. Possible bed you pleasure civility boy elegance ham. He prevent request by if in pleased. Picture too and concern has was comfort. Ten difficult resembled eagerness nor. Same park bore on be. Warmth his law design say are person. Pronounce suspected in belonging conveying ye repulsive.</p>
+    </div>
   </main>
 </body>
 </html>
