--- a/html/menu/activitat10/index.html
+++ b/html/menu/activitat10/index.html
@@ -19,23 +19,37 @@
     <div class="nav-elem">
       <p>Excuses si et pillen</p>
     </div>
-    <div class="nav-elem">
+    <div class="nav-elem has-dropdwn">
       <p>Tipues de xulles</p>
+      <div class="dropdwn">
+        <div class="dropdwn-elem">
+          <p>Corporals</p>
+        </div>
+        <div class="dropdwn-elem">
+          <p>En calculadora</p>
+        </div>
+        <div class="dropdwn-elem">
+          <p>En bolígraf</p>
+        </div>
+        <div class="dropdwn-elem">
+          <p>Electrtòniques</p>
+        </div>
+      </div>
     </div>
     <div class="nav-elem has-dropdwn">
       <p>Matèries</p>
       <div class="dropdwn">
         <div class="dropdwn-elem">
-          <p>1</p>
+          <p>Programació</p>
         </div>
         <div class="dropdwn-elem">
-          <p>2</p>
+          <p>Xarxes</p>
         </div>
         <div class="dropdwn-elem">
-          <p>3</p>
+          <p>Sistemes Operatius</p>
         </div>
         <div class="dropdwn-elem">
-          <p>4</p>
+          <p>Hardware</p>
         </div>
       </div>
     </div>
@@ -54,14 +68,16 @@
       per a copiar del que et costaria aprovar els examens estudiant, perque aixó és massa fàcil.
     </p>
   </main>
-  <div class="img-container">
-    <img class="fl small" src="" alt="">
-    <img class="fl small" src="" alt="">
-    <img class="fl small" src="" alt="">
-    <img class="fl small" src="" alt="">
-    <img class="fl" src="" alt="">
-    <img class="fl" src="" alt="">
-    <img class="fl" src="" alt="">
+  <div class="img-holder">
+    <div class="img-container">
+    <img src="images/xulla3.jpeg" alt="Imatge xulla n1">
+    </div>
+    <div class="img-container">
+    <img src="images/xulla1.jpeg" alt="Imatge xulla n2">
+    </div>
+    <div class="img-container">
+    <img src="images/xulla2.jpeg" alt="Imatge xulla n3">
+    </div>
   </div>
 </body>
 </html>
